src/components/sections/gallery.module.css
.galleryContainer {
	grid-template-columns: repeat(3, 1fr);
	grid-gap: 28px;
	background-image: url('../../images/bg.svg');
}

.imageView {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-column: 1 / -1;
}

.galleryItem {
	margin: 0;
}

.buttonContainer {
	margin-top: 54px;
	grid-column: 1 / -1;
}

.heading {
	grid-column: 1 / -1;
	color: #371D3A;
	background-color: rgba(255, 255, 255, .3);
}

